--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Image Link for Website Icon -->
-	<link rel="icon" href="./assets/images/wk.png" type ="image/x-icon">
+	<link rel="icon" href="wk.png" type ="image/x-icon">
 	<title>Winstar Tolentino</title>
 
 	<!-- CSS Link for mystyle.css -->
-	<link rel="stylesheet" type="text/css" href="./assets/css/mystyle.css">
+	<link rel="stylesheet" type="text/css" href="/mystyle.css">
 
 </head>
 <body>
 
 	<header>
 		<div class="my_logo">
-			<img src="./assets/images/wk.png" alt="">
+			<img src="wk.png" alt="">
 			<a href="" class="header_logo">w<span>K</span>Projects</a>
 		</div>
 		<nav class="nav" id="nav-menu">
@@ -46,6 +46,6 @@
 
 
 	<!-- JS Link for myscript.js -->
-	<script src="./assets/js/myscript.js"></script>
+	<script src="myscript.js"></script>
 </body>
 </html>
