--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>Winstar Tolentino</title>
 
 	<!-- CSS Link for mystyle.css -->
-	<link rel="stylesheet" type="text/css" href="/mystyle.css">
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
 
 </head>
 <body>
